# rust-streaming-client

./: .gitignore  COMPREHENSIVE_REVIEW_FINDINGS.md  CONVEX_INTEGRATION_ANALYSIS.md  Cargo.toml  GSTREAMER_VS_FFMPEG_ANALYSIS.md  README.md  SENTRY_INTEGRATION.md  TESTING.md  build.rs  config.toml
.github/workflows/: claude-code-review.yml  claude.yml
benches/: power_benchmarks.rs
examples/: communication_example.rs  device_number_management_example.rs
scripts/: create-signed-release.sh  release-config.toml  test_runner.sh  update.sh
src/: api.rs  audio.rs  auth.rs  buffer.rs  capabilities.rs  config.rs  config_sync.rs  convex_api.rs  convex_auth.rs  convex_integration.rs  convex_subscriptions.rs  convex_tenant.rs  device.rs  diagnostics.rs  encryption.rs  error_handling.rs  gps.rs  incident.rs  integrity.rs  lib.rs  main.rs  media.rs  offline_queue.rs  realtime.rs  recovery.rs  release_manager.rs  remote_config.rs  resource_manager.rs  sentry_integration.rs  status.rs  storage_manager.rs  streaming.rs  upload_manager.rs  validation.rs
src/camera/: mod.rs  mod.rs.backup
src/hardware/: config.example.toml  linux.rs  macos.rs  mod.rs
src/simulation/: mod.rs
src/ui/: main.rs  main_window.slint  mod.rs
tests/: integration_tests.rs  power_efficiency_tests.rs
ui/: main.slint
