[package]
name = "bodycam-client"
version = "0.1.0"
edition = "2021"
authors = ["PatrolSight Security"]
description = "Body camera client for security monitoring platform"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
async-trait = "0.1"
rustyline = "12.0"
slint = "1.6"
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-video = "0.22"
gstreamer-audio = "0.22"
nokhwa = { version = "0.10", features = ["input-native"] }
openal = "0.3"
cpal = "0.15"
rodio = "0.17"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "bodycam-client"
path = "src/main.rs"